# go-backend-auth/docs/swagger.yaml
@@ -1,49 +1,4 @@
 basePath: /
-definitions:
-  controllers.LoginInput:
-    properties:
-      password:
-        example: password123
-        type: string
-      username:
-        example: budi87
-        type: string
-    required:
-    - password
-    - username
-    type: object
-  controllers.RegisterInput:
-    properties:
-      id_jabatan:
-        description: Kolom idjabatan (BigInt)
-        example: 1
-        type: integer
-      id_tugas:
-        description: Kolom idtugas
-        example: "87011234"
-        type: string
-      nama_lengkap:
-        example: Budi Santoso
-        type: string
-      no_telp:
-        description: Kolom hp
-        example: "08123456789"
-        type: string
-      password:
-        example: password123
-        type: string
-      username:
-        description: Kolom username
-        example: budi87
-        type: string
-    required:
-    - id_jabatan
-    - id_tugas
-    - nama_lengkap
-    - no_telp
-    - password
-    - username
-    type: object
 host: localhost:8080
 info:
   contact:
@@ -221,65 +176,6 @@ paths:
       summary: Tambah Wilayah Baru
       tags:
       - Master Data (Wilayah)
-  /login:
-    post:
-      consumes:
-      - application/json
-      description: Login menggunakan Username dan Password.
-      parameters:
-      - description: Data Login
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.LoginInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Login User
-      tags:
-      - auth
-  /signup:
-    post:
-      consumes:
-      - application/json
-      description: Mendaftar akun baru dengan status 'View' (3).
-      parameters:
-      - description: Data Registrasi
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.RegisterInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Register User Baru (Public)
-      tags:
-      - auth
 securityDefinitions:
   BearerAuth:
     in: header
